<resources>
    <string name="app_name">Load App</string>

    <string name="app_description">Download files from Internet</string>
    <string name="detail_activity">Detail Activity</string>

    <string name="ok">OK</string>

    <string name="link1_name">Glide - Image Loading Library by BumpTech</string>
    <string name="link1_url">https://github.com/bumptech/glide</string>
    <string name="link2_name">LoadApp - Current repository by Udacity</string>
    <string name="link2_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="link3_name">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="link3_url">https://github.com/square/retrofit</string>

    <string name="select_file_hint">Please select the file to download</string>
    <string name="download">Download</string>
    <string name="loading">We are loading</string>

    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>

    <string name="download_image_desc">Download image</string>

    <string name="check_status">Check the status</string>
    <string name="notification_channel_id">download_channel</string>
    <string name="notification_channel_name">Download channel</string>
    <string name="notifications_prohibited">Notifications have been prohibited by the user</string>
    <string name="download_completed">%1$s! completed</string>
    <string name="download_failed">%1$s! failed</string>
</resources>